--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,3 +6,76 @@ body {
 .carousel-inner .carousel-item{
   height: 50vh;
 }
+
+.titulo{
+  text-align: center;
+  margin: 2%;
+}
+
+.card_carrinho {
+background-color: white;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+margin: 3% 5% 7% 5%;
+border-radius: 5px;
+width: 90%;
+}
+
+.tabela_produto {
+margin: 20px;
+width: 750px;
+}
+
+.card_produto {
+background-color: #f5f5f5;
+position: relative;
+margin: auto;
+overflow: hidden;
+width: 750px;
+height: 170px;
+border-radius: 8px;
+}
+
+.card_produto:hover {
+box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card_total {
+  background-color: #f5f5f5;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
+  width: 300px;
+  height: 170px;
+  border-radius: 8px;
+}
+
+#img_produto {
+  margin: 3%;
+width: 170px;
+height: 140px;
+}
+
+.info_produto {
+position: absolute;
+width: 40%;
+height: 80%;
+top: 12%;
+left: 40%;
+}
+
+.frete{
+  display: flex;
+  align-items: baseline;
+  font-size: large;
+  padding-left: 180px;
+}
+
+
+#finalizar{
+  margin-left: 2%;
+  margin-right: 2%;
+  background: #b0ff83;
+  font-weight: bold;
+  border-color: #8bff48;
+}
+
